src/IntPolyh/IntPolyh_Intersection.cxx
@@ -29,11 +29,7 @@
 
 #include <NCollection_Map.hxx>
 
-static Standard_Boolean IsAdvRequired(IntPolyh_PMaillageAffinage& theMaillage);
-
 static Standard_Integer ComputeIntersection(IntPolyh_PMaillageAffinage& theMaillage);
-
-static Standard_Boolean AnalyzeIntersection(IntPolyh_PMaillageAffinage& theMaillage);
 
 //=======================================================================
 //function : IntPolyh_Intersection
@@ -49,6 +45,7 @@ IntPolyh_Intersection::IntPolyh_Intersection(const Handle(Adaptor3d_Surface)& th
   myNbSU2 = 10;
   myNbSV2 = 10;
   myIsDone = Standard_False;
+  myIsParallel = Standard_False;
   mySectionLines.Init(1000);
   myTangentZones.Init(10000);
   Perform();
@@ -72,6 +69,7 @@ IntPolyh_Intersection::IntPolyh_Intersection(const Handle(Adaptor3d_Surface)& th
   myNbSU2 = theNbSU2;
   myNbSV2 = theNbSV2;
   myIsDone = Standard_False;
+  myIsParallel = Standard_False;
   mySectionLines.Init(1000);
   myTangentZones.Init(10000);
   Perform();
@@ -95,6 +93,7 @@ IntPolyh_Intersection::IntPolyh_Intersection(const Handle(Adaptor3d_Surface)& th
   myNbSU2 = theUPars2.Length();
   myNbSV2 = theVPars2.Length();
   myIsDone = Standard_False;
+  myIsParallel = Standard_False;
   mySectionLines.Init(1000);
   myTangentZones.Init(10000);
   Perform(theUPars1, theVPars1, theUPars2, theVPars2);
@@ -442,7 +441,7 @@ void IntPolyh_Intersection::MergeCouples(IntPolyh_ListOfCouples &anArrayFF,
 //           too small (less than 5 deg), the advanced intersection is required.
 //           Otherwise, the standard intersection is considered satisfactory.
 //=======================================================================
-Standard_Boolean IsAdvRequired(IntPolyh_PMaillageAffinage& theMaillage)
+Standard_Boolean IntPolyh_Intersection::IsAdvRequired(IntPolyh_PMaillageAffinage& theMaillage)
 {
   if (!theMaillage)
     return Standard_True;
@@ -452,7 +451,7 @@ Standard_Boolean IsAdvRequired(IntPolyh_PMaillageAffinage& theMaillage)
   // Number of interfering pairs
   Standard_Integer aNbCouples = Couples.Extent();
   // Flag to define whether advanced intersection is required or not
-  Standard_Boolean isAdvReq = (aNbCouples == 0);
+  Standard_Boolean isAdvReq = (aNbCouples == 0) && !IsParallel();
   if (isAdvReq)
     // No interfering triangles are found -> perform advanced intersection
     return isAdvReq;
@@ -507,7 +506,7 @@ Standard_Integer ComputeIntersection(IntPolyh_PMaillageAffinage& theMaillage)
 //function : AnalyzeIntersection
 //purpose  : Analyzes the intersection on the number of interfering triangles
 //=======================================================================
-Standard_Boolean AnalyzeIntersection(IntPolyh_PMaillageAffinage& theMaillage)
+Standard_Boolean IntPolyh_Intersection::AnalyzeIntersection(IntPolyh_PMaillageAffinage& theMaillage)
 {
   if (!theMaillage)
     return Standard_False;
@@ -528,7 +527,9 @@ Standard_Boolean AnalyzeIntersection(IntPolyh_PMaillageAffinage& theMaillage)
     if (npara >= theMaillage->GetArrayOfTriangles(1).NbItems() ||
         npara >= theMaillage->GetArrayOfTriangles(2).NbItems())
     {
-      return Standard_False;
+      Couples.Clear();
+      myIsParallel = Standard_True;
+      return Standard_True;
     }
   }
   return Standard_True;
